...
        
        let action = UIAlertAction (
            title:alertInformation.buttonText,
            style: .default,
            handler: alertInformation.completion)
        
        alert.view.accessibilityIdentifier = "Game results"
        
        alert.addAction(action)
        
        present(alert, animated: true, completion: nil)
    }
    
...
